--- a/factoriallib/factoriallib.vcxproj.filters
+++ b/factoriallib/factoriallib.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h">
+    <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
+    <ClInclude Include="factoriallib.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
