--- a/factoriallib/factoriallib.vcxproj
+++ b/factoriallib/factoriallib.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="factoriallib.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="prime_swing.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="factoriallib.cpp" />
@@ -162,6 +163,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="prime_swing.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
