--- a/factorialusing/CMakeLists.txt
+++ b/factorialusing/CMakeLists.txt
@@ -3,4 +3,12 @@ project(factorials)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(factorials main.cpp)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+
+set(SOURCES main.cpp)
+add_executable(factorials ${SOURCES})
+
+include(FindPkgConfig)
+find_package(Factoriallib REQUIRED)
+include_directories(${FACTORIALLIB_INCLUDE_DIR})
+target_link_libraries(${PROJECT_NAME} ${FACTORIALLIB_LIBRARY})
