--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ project(factorials)
 
 set(CMAKE_CXX_STANDARD 17)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+add_subdirectory(factoriallib_tests)
+
+list(APPEND CMAKE_MODULE_PATH "factorialusing/cmake")
 
 set(SOURCES main.cpp)
 add_executable(factorials ${SOURCES})
