Add simple while algorithm

--- a/factoriallib_benchmarks/CMakeLists.txt
+++ b/factoriallib_benchmarks/CMakeLists.txt
@@ -2,7 +2,7 @@ project(factoriallib_benchmarks)
 add_subdirectory(lib)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(factoriallib_benchmarks_run main.cpp)
+add_executable(factoriallib_benchmarks_run falgo_benchmark.cpp)
 
 target_link_libraries(factoriallib_benchmarks_run factoriallib_lib)
 
